fix height table has scrollbar and sticky thead

--- a/src/assets/css/Pro-Search.css
+++ b/src/assets/css/Pro-Search.css
@@ -11,7 +11,7 @@
 /* .displayTable [class*="makeStyles-paper"]{overflow-x: auto;}
 .displayTable .MuiTableContainer-root{width: 200vw!important;} */
 /* .displayTable{max-height: calc(100vh - 300px);} */
-.displayTable .tableContent{max-height: calc(100vh - 300px);min-width:2400px;}
+.displayTable .tableContent{min-width:2400px;}
 .tableContent{box-shadow: none;overflow:auto;/*position: sticky;top: 0;z-index: 10;*/}
 .tableContent tr>*{color: #202124;border-bottom-color: #fff; border-right: 1px solid #fff;font-family: "Sarabun";}
 .tableContent thead{position: relative; z-index: 2;}
@@ -20,7 +20,8 @@
     top: 0;
     z-index: 10;} */
 .tableContent thead>tr,.tableContent thead>tr .MuiTableCell-stickyHeader{background-color: #66c792;}
-.tableContent thead>tr label span{font-size: 14px; font-weight: 500;}
+/* .tableContent thead>tr .MuiTableCell-stickyHeader{z-index: 0;} */
+.tableContent thead>tr label span{font-size: 14px; font-weight: 500; padding-top: 0; padding-bottom: 0;}
 .tableContent tbody>tr{background-color: #E2E6EF;white-space: nowrap;}
 .tableContent tbody>tr .disabled{opacity: .35; pointer-events: none;}
 .tableContent tbody>tr.MuiTableRow-root.Mui-selected, .tableContent tbody>tr.MuiTableRow-root.Mui-selected:hover{background-color: #E2E6EF;}
@@ -32,4 +33,8 @@
 .tableContent tr>*:nth-child(4){position: sticky; left: 0; z-index: 3;background-color: #E2E6EF; box-sizing: border-box;}
 .tableContent tr>*:nth-child(2){left: 48px;}
 .tableContent tr>*:nth-child(3){left: 96px; min-width: 50px;}
-.tableContent tr>*:nth-child(4){left: 182px; min-width: 115px; box-shadow: 3px 0 1px rgba(0,0,0,0.15);}
+.tableContent tr>*:nth-child(4){left: 181.5px; min-width: 115px; box-shadow: 3px 0 1px rgba(0,0,0,0.15);}
+/* .displayTable:not(.fix-head) [style*="max-height"]>.tableContent tr>*:first-child,
+.displayTable:not(.fix-head) [style*="max-height"]>.tableContent tr>*:nth-child(2),
+.displayTable:not(.fix-head) [style*="max-height"]>.tableContent tr>*:nth-child(3),
+.displayTable:not(.fix-head) [style*="max-height"]>.tableContent tr>*:nth-child(4){z-index: 1;} */
